# agentic-ai-customer-support

./: .env  .env.example  .env.local.example  .env.native  .gitignore  AWS_COMPONENTS_INTERACTION_GUIDE.md  AWS_MCP_SERVER_REMOVAL.md  CLEANUP_SUMMARY.md  CONFLUENT_KAFKA_MCP_DOCKER_MIGRATION.md  Dockerfile  Dockerfile.mcp  FILE_MAPPING.txt  KAFKA_MCP_UPDATE_SUMMARY.md  LOCAL_TESTING_GUIDE.md  MIGRATION_COMPLETE.md  Makefile  TROUBLESHOOTING.md  docker-compose.test.yml  docker-compose.yml  docker.sh  main.py  pyproject.toml  pytest.ini  readme.md  requirements-docker.txt  requirements.txt  setup.py  start_local_testing.sh
a2a_protocol/: a2a_coordinator.py  a2a_knowledge_agent.py  a2a_query_agent.py  a2a_response_agent.py  base_a2a_agent.py  simplified_main.py
agents/: __init__.py  base_agent.py  enhanced_query_agent.py  knowledge_agent.py  query_agent.py  response_agent.py
api/: api_main.py  enhanced_routes.py  exceptions.py  routes.py  schemas.py
cicd/: .dockerignore  docker-compose.api.yml  docker-compose.yml
config/: aws_mcp.env  env_settings.py  kafka.env  postgres_mcp.env  settings.py
core/: evolution_engine.py
data_sources/: kafka_consumer.py  pdf_processor.py  rdbms_connector.py
docs/: 101-api-docker-component-test.md  A2A_DOCKER_TESTING_GUIDE.md  A2A_LOCAL_TESTING.md  API_MCP_Integration.md  API_TESTING_GUIDE.md  AWS_MCP_Client.md  DOCKER_TESTING_GUIDE.md  EXTERNAL_AWS_MCP.md  EXTERNAL_KAFKA_MCP.md  EXTERNAL_POSTGRES_MCP.md  External_AWS_MCP_Integration.md  MCP_OPTIMIZATION_SUMMARY.md  MCP_Optimization_Summary.md  Optimized_MCP_Client.md  PostgreSQL_Client_Removal.md  README.md  SERVICE_LAYER_REFACTORING.md  agents.md  api_reference.md  architecture.md  data_sources.md  generic_faqs.md  mcp_integration.md  setup_guide.md
examples/: a2a_usage_example.py  external_aws_mcp_example.py  mcp_client_migration.py  mcp_integration_example.py  optimized_mcp_usage.py
integration/: __init__.py  database_service.py
mcp/: agent_mcp_integration.py  aws_mcp_server.py  aws_mcp_wrapper.py  base_mcp_server.py  database_mcp_server.py  kafka_mcp_server.py  kafka_mcp_wrapper.py  mcp_server_manager.py  postgres_mcp_wrapper.py  stdio_server.py  websocket_server.py
mcp_servers/: aws_mcp.py  base_mcp.py  kafka_mcp.py  mcp_client.py  postgres_mcp.py  server_manager.py
ops/: .dockerignore  docker-compose.api-only.yml  docker-compose.yml
scripts/: cleanup.py  (+24 more)
(+244 files in other folders)
